--- a/web/estilo.css
+++ b/web/estilo.css
@@ -1,7 +1,63 @@
 
-body{background-image: url("img/back02.png"); color: black; font-family: sans-serif;}
+body{background-image: url("img/back02.png"); 
+     color: white; 
+    font-family: helvetica;
+}
+#todo{
+    margin: auto;
+    width: 1024px;
+}
+#menu {
+    margin:auto;
+    padding-left:20px;
+    padding-top:5px;    
+    height:25px;
+    border-radius: 5px;
+    background-image:url(img/nav_bg.png);
+}
+#menu ul{
+    list-style:none; /* Eliminamos los bullets */
+    margin:0px; /* Quitamos los margenes */
+    padding:0px; /* Quitamos el padding */
+}
+#menu ul li {
+    float:left; /* Hacemos que el menu se muestre horizontal */
+    padding-left:10px;
+    padding-right:10px;
+    border-right:1px solid #FFFFFF;
+}
+#menu ul li a{
+    text-decoration:none;
+    color:#CCCCCC;
+    font-weight:bold;
+}
+#menu ul li a:hover{
+    color:#FFFFFF;
+}
+#login{
+    text-align: right;
+}
 
-a{color:white; text-decoration:none;}
+#login input{
+    font-size: 15px;
+    border-radius: 4px;
+    width: 10%
+}
+
+#login label{
+    font-size: 15px;
+    color: white;
+}
+
+#login button{
+    height: 16px;
+}
+.loguear{
+    background-image: url(css/custom-theme/images);
+    background-position:  -144px -96px;
+        
+}
+/*a{color:white; text-decoration:none;}
 
 a:hover{color: red; text-decoration:none;}
 
@@ -32,111 +88,11 @@ h4{padding: 0px 0px 0px 0px; text-align: center;}
 .img_prov{width:100px; height:100px; padding:0px 10px 0px 0px;}
 .caratula{width:110px; height:110px; padding:0px 0px 0px 0px;}
 .center{float:center; text-decoration:none; color:white; text-align:center; margin:auto; font-weight:bold;}
-ul{color: white; font-weight:normal ; font-size: 18px; }
+ul{color: white; font-weight:normal ; font-size: 18px;list-style: none;  }
 .menu{width:100%;}
 .portada{width:300px; height:300px;}
 #listado {width: 45%; float: right; }
 ol li{font-size: 14px;}
 #caratula{float: left; display: inline; width: 55%;text-align: center;}
 .logoAcordeon{width:400px; height:210px; padding: 100px 50px 50px 220px}
-#caratulaAcordeon{float: none; display: inline; margin: auto; width: 100%}
-div.demo{width:1080px;margin:auto;}
-div.cuerpo{width:100%;margin:auto}
-.hoja1{height:200px}
-/*--------------------------para catalogo-------------------------------------*/
-
-
-div.tabla {
-  margin-left: 0;
-  width:90%;
-}
-
-div.elcatalogo{
-    width:100%;
-}
-
-div.productoSeleccionado{
-	margin:25px 25px 25px 25px;
-}
-
-table.delCatalogo{
-    border:1px solid brown;
-    background-color:beige;
-    border-collapse:collapse;  
-}
-
-thead.delCatalogo{   
-    font-family: serif;
-    color:black;
-    background-color:gray;
-}
-
-th.tapa{
-    width: 57px; 
-	color:black;	
-}
-th.genero{
-    width: 102px;  
-	color:black;	
-}
-th.interprete{
-    width: 225px;  
-	color:black;
-}
-
-th.disco{
-    width: 225px; 
-	color:black;
-}
-
-th.anio{
-    width: 52px; 
-	color:black;
-}
-
-td.delCatalogo{    
-    padding: 15px;
-    color:black;
-    border: 1px solid brown; 
-    
-}
-
-td.anio{
-    text-align:right;
-    padding: 15px;
-    color:black;
-    border: 1px solid brown; 
-}
-
-div.panelOrdenCatalog{
-	width:10%;
-	float:left;
-	margin-left: 10px;
-	margin-right: 10px;
-	margin-top: 100px;
-	color:white;
-	text-align: center;
-}
-
-.botones{
-    width:100px;
-    height:100px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-div.marquesina{
-	width:800px; 
-	margin-top:10px;
-	margin-bottom:10px;
-	margin-left:auto;
-	margin-right:auto;
-}
-
-a.a_prodSelecc{    
-    color:blue;    
-}
-
-.error{background: #FEF1EC; border: 2px solid #CD0A0A; color: #CD0A0A}
-/*-------------------------------------------------------------------*/
-
+#caratulaAcordeon{float: none; display: inline; margin: auto; width: 100%}*/
