--- a/web/estilo.css
+++ b/web/estilo.css
@@ -1,11 +1,15 @@
-
 body{background-image: url("img/back02.png"); 
      color: white; 
     font-family: helvetica;
 }
+
+
 #todo{
     margin: auto;
     width: 1024px;
+    background-color: transparent;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #CCCCCC;
 }
 #menu {
     margin:auto;
@@ -34,29 +38,45 @@ body{background-image: url("img/back02.png");
 #menu ul li a:hover{
     color:#FFFFFF;
 }
-#login{
+
+#menu #login{
     text-align: right;
 }
 
 #login input{
-    font-size: 15px;
-    border-radius: 4px;
-    width: 10%
+    border-radius: 13px;
+    font-size: 11px;    
+    vertical-align: bottom;
+    width: 12%;
 }
 
 #login label{
-    font-size: 15px;
     color: white;
+    font-size: 15px;
+    vertical-align: text-top;
 }
 
 #login button{
-    height: 16px;
+    background-image: url(css/custom-theme/images/ui-icons_222222_256x240.png);
+    background-position:  -144px -96px;    
+    border-bottom: 1px;
+    border-radius: 10px;    
+    height: 20px;
+    width: 20px;
 }
-.loguear{
-    background-image: url(css/custom-theme/images);
-    background-position:  -144px -96px;
-        
+
+     
+
+#cuerpo img{
+padding: 4px;
+border: 1px solid #ECECDE;
+background-color: background;
 }
+
+#mensajeSesion{
+    float: right;
+}
+
 /*a{color:white; text-decoration:none;}
 
 a:hover{color: red; text-decoration:none;}
